# airis

./: .gitignore  CHANGELOG.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: test.yml
scripts/: setup-pdfium.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/pdfium/: PDFIUM_README.txt
src-tauri/resources/pdfium/include/: PLACEHOLDER
src-tauri/resources/pdfium/lib/: PLACEHOLDER
src-tauri/src/: cli_install.rs  db.rs  error.rs  jobs.rs  lib.rs  logging.rs  main.rs  runtime.rs  secrets.rs  settings.rs
src-tauri/src/cache/: embedding.rs  mod.rs  response.rs
src-tauri/src/commands/: ab_compare.rs  book.rs  byok.rs  chat_session.rs  cli_setup.rs  consistency.rs  dev_acceptance.rs  file.rs  hardware.rs  intervention.rs  learning_dev.rs  llm.rs  memory.rs  memory_facts.rs  mod.rs  overview.rs  pomodoro.rs  recall.rs  recall_v05.rs  search.rs  settings.rs  srs.rs  srs_generation.rs  study.rs  triggers.rs  updates.rs  validation.rs
src-tauri/src/index/: chunker.rs  keyword.rs  mod.rs
src-tauri/src/index/v041/: chunker.rs  context.rs  embedder.rs  indexer.rs  mod.rs  retrieval.rs  vector_store.rs
src-tauri/src/index/v042/: active_index.rs  embedder_t2.rs  indexer_t2.rs  manifest.rs  mod.rs  resume.rs  retrieval.rs  vector_store_t2.rs  worker.rs
src-tauri/src/index/v043/: citation_check.rs  history_compressor.rs  hyde.rs  mod.rs  post_retrieval.rs  reranker.rs  rewriter.rs
src-tauri/src/index/v044/: byok_embedding.rs  mod.rs
src-tauri/src/index/v060/: graph.rs  mod.rs  passage_clean.rs  query_route.rs  trace.rs
src-tauri/src/llm/: anthropic.rs  claude_cli.rs  codex_cli.rs  extraction.rs  gemini.rs  gemini_cli.rs  mock.rs  mod.rs  openai.rs  sse.rs
src-tauri/src/migrations/: v10_thumbnails_dir_rename.sql  v11_study_description.sql  v12_chat_context.sql  v13_chunks.sql  v14_ab_compare.sql  v15_robustness.sql  v16_cancelled_status.sql  v17_book_format_docx.sql  v18_chat_message_provider.sql  v19_memory_facts.sql  v1_initial.sql  v20_srs_generation.sql  v21_recall_attempts.sql  v22_entity_graph.sql  v23_chat_sessions.sql  v2_studies_and_chat.sql  v3_paragraphs_fts.sql  v4_intervention_and_history.sql  v5_pomodoro_cycles.sql  v6_srs_cards.sql  v7_recall_challenges.sql  v8_book_thumbnail.sql  v9_study_thumbnail.sql
src-tauri/src/parsers/: docx.rs  html.rs  markdown.rs  mod.rs  pdf.rs  slug.rs  types.rs
src-tauri/src/power_monitor/: linux.rs  macos.rs  mod.rs  noop.rs  priority.rs  windows.rs
src-tauri/src/runtime/: hardware_probe.rs  mod.rs  throttle.rs
src-tauri/tests/: v041_chunker_smoke.rs  v041_db_smoke.rs  v041_retrieval_smoke.rs  v042_cache_smoke.rs  v042_cascade_smoke.rs  v042_robust_smoke.rs  v042_throttle_smoke.rs  v043_acceptance_smoke.rs  v043_hyde_smoke.rs  v043_post_retrieval_smoke.rs  v043_reranker_smoke.rs  v043_rewriter_smoke.rs  v044_byok_smoke.rs  v044_docx_smoke.rs  v044_hardware_smoke.rs  v060_pdf_outline_smoke.rs  v060_pdfium_perf.rs
src/components/: AbComparePanel.test.tsx  AbComparePanel.tsx  AbnormalTerminationDialog.test.tsx  AbnormalTerminationDialog.tsx  AddBookDialog.tsx  AirisLogo.tsx  ApiKeyInput.test.tsx  ApiKeyInput.tsx  BookList.tsx  BookViewer.tsx  BookViewer.zoom.test.tsx  ByokSection.test.tsx  ByokSection.tsx  ChatMessage.test.tsx  ChatMessage.tsx  ChatPanel.test.tsx  ChatPanel.tsx  CliSetupDialog.tsx  FileViewer.tsx  HardwareRecommendation.test.tsx  HardwareRecommendation.tsx  LibraryInspector.tsx  MemoryEditor.tsx  MemoryPanelContent.test.tsx  MemoryPanelContent.tsx  MetacogAlertToast.test.tsx  MetacogAlertToast.tsx  NewStudyDialog.tsx  PomodoroInline.tsx  PomodoroPanel.tsx  PomodoroPanelContent.tsx  RecallAutoTrigger.tsx  RecallChallengeDialog.test.tsx  RecallChallengeDialog.tsx  RecallPanel.tsx  SearchStrengthSection.test.tsx  SearchStrengthSection.tsx  ShortcutsDialog.tsx  SrsPanel.test.tsx  SrsPanel.tsx  (+7 more)
src/components/book/: BookFormCard.test.tsx  BookFormCard.tsx  bookDraft.ts
src/components/dockview/: PanelTab.tsx
src/components/layout/: Pane.tsx  SlideupPanel.tsx  SlideupTabs.tsx
src/components/slideup/: QuizContent.tsx  SrsDeckContent.tsx
src/components/ui/: sonner.tsx
src/lib/: api.ts  headingPlan.ts  i18n.ts  panelIcons.tsx  providerLabels.ts  sanitizeName.ts  toast.ts  types.ts  utils.ts
src/locales/: ko.json
src/pages/: Library.tsx  NewStudyWizard.tsx  ReportsPage.test.tsx  ReportsPage.tsx  Settings.tsx  Welcome.tsx  Workspace.tsx
src/store/: activeBookStore.ts  bookStore.ts  chatStore.test.ts  chatStore.ts  fileStore.ts  settingsStore.ts  studyStore.ts  uiStore.ts
src/styles/: dockview-theme.css  tokens.css
src/test/: setup.ts
tests/fixtures/: sample.md
