[package]
name = "airis"
version = "0.1.0"
description = "airis — LLM 기반 교재 학습 보조 데스크톱 앱"
authors = ["airis contributors"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Windows에서 bin 이름과 충돌하지 않도록 lib 이름에 `_lib` 접미사를 둔다.
# https://github.com/rust-lang/cargo/issues/8519
name = "airis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
keyring = "3"
zeroize = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time", "process", "io-util"] }
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
regex = "1"
# 책 파서 (PR 10)
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
scraper = "0.21"
ammonia = "4"
# PDF — pdfium-render는 PDFium dylib을 *runtime*에 동적 로드.
# 앱 번들에 PDFium binary 동봉 + Pdfium::bind_to_library(path) 호출.
pdfium-render = { version = "0.8", features = ["image"] }
# PR 60: 책 썸네일 PNG 인코딩 (pdfium 첫 페이지 → DynamicImage → PNG bytes 저장).
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
