[package]
name = "airis"
version = "0.1.0"
description = "airis — LLM 기반 교재 학습 보조 데스크톱 앱"
authors = ["airis contributors"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Windows에서 bin 이름과 충돌하지 않도록 lib 이름에 `_lib` 접미사를 둔다.
# https://github.com/rust-lang/cargo/issues/8519
name = "airis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
keyring = "3"
zeroize = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time", "process", "io-util", "signal"] }
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
regex = "1"
# 책 파서 (PR 10)
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
scraper = "0.21"
ammonia = "4"
# PDF — pdfium-render는 PDFium dylib을 *runtime*에 동적 로드.
# 앱 번들에 PDFium binary 동봉 + Pdfium::bind_to_library(path) 호출.
pdfium-render = { version = "0.8", features = ["image"] }
# PR 60: 책 썸네일 PNG 인코딩 (pdfium 첫 페이지 → DynamicImage → PNG bytes 저장).
image = { version = "0.25", default-features = false, features = ["png"] }
# v0.4.4 PR 3 (D-093): DOCX 파서 — Rust 네이티브, 단일 binary 유지. image feature 끄면
# zip + quick-xml만 추가 의존성. read_docx로 헤딩 스타일+한국어 본문 추출 검증 완료.
docx-rs = { version = "0.4", default-features = false }
# v0.4.1 PR 1 (D-073~D-077):
#   * fastembed = ONNX 런타임 위에서 mE5-small INT8 임베딩 — Tauri appdata로 cache override.
#   * sqlite-vec = vec0 가상 테이블. C 소스 static link라 OS별 .so/.dll 동봉 불필요 (D-074).
#     pin 0.1.9 (PoC d3 검증 버전).
fastembed = "5"
sqlite-vec = "=0.1.9"
# v0.4.1 PR 2 (D-078~D-080):
#   * text-splitter = LangChain RecursiveCharacterTextSplitter Rust 포팅. MIT.
#     800~1200 토큰 윈도우 청킹 + 자체 chunk_size·overlap 제어 (D-078).
#   * icu_segmenter = ICU4X SentenceSegmenter — 한국어 sentence boundary (D-079 채택).
#     비교 측정에서 정규식 대비 binary +30KB(vs +1.4MB), 정확도 45/50(vs 30/50)으로 우월.
text-splitter = "0.30"
icu_segmenter = "2"

# v0.4.2 PR 5 (D-083) 자원 제한:
#   * num_cpus = ONNX intra_op_threads 절반 결정 시 코어 수.
#   * libc = Linux/macOS setpriority(PRIO_PROCESS, 0, 10) (nice 10).
#     Windows priority는 windows crate (target-cfg).
num_cpus = "1"

# v0.4.2 PR 3 (D-081):
#   * Linux UPower D-Bus 구독 (BatteryLow / SleepEntering / SleepResumed 트리거).
#     macOS/Windows native power API는 v0.4.4 다양화 슬라이스에서 본격 검증 — 본 PR에선
#     stub만 두어 cfg-gating으로 컴파일은 보장.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

# v0.4.2 PR 5 (D-083) — Windows process priority는 windows crate.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
# v0.4.4 PR 3 (D-093) — docx 통합 smoke test에서 in-memory DOCX 빌드 시 필요.
docx-rs = { version = "0.4", default-features = false }
